# chessproj

./: .gitignore  CMakeLists.txt  README.md
include/: board.h  game.h  menu.h  piece.h  renderer.h  theme.h  validator.h
src/: board.cpp  game.cpp  main.cpp  menu.cpp  renderer.cpp  theme.cpp  validator.cpp
src/CMakeScripts/: ReRunCMake.make
